changes project to use postgres with docker
